--- a/src/css/common.css
+++ b/src/css/common.css
@@ -9,22 +9,13 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ffffff;
+  background-color: #fafafa;
   color: #212121;
+  font-weight: 400;
+  font-size: 18px;
   line-height: 1.5;
+  letter-spacing: -0.02em;
 }
-
-/* body {
-    font-family: 'Epilogue', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.29;
-    letter-spacing: -0.02em;
-
-    color: #141414;
-    background-color: #fbfbfb;
-} */
 
 body,
 h1,
@@ -47,13 +38,13 @@ p:last-child {
   margin-bottom: 0;
 }
 
-/* ul,
+ul,
 ol,
 li,
 button {
   padding: 0;
-  background-color: transparent;
-} */
+  /* background-color: transparent; */
+}
 
 input,
 button,
@@ -72,11 +63,12 @@ a {
   text-decoration: none;
 }
 
-img {
+/* img {
   display: block;
   max-width: 100%;
   height: auto;
-}
+  object-fit: cover;
+} */
 
 video {
   display: block;
@@ -94,18 +86,23 @@ button {
   cursor: pointer;
   font: inherit;
   font-weight: bold;
-  /* margin-right: 2px;
-  margin-left: 2px; */
 }
+/* button:disabled {
+  pointer-events: none;
+} */
 input {
   padding: 8px;
   font: inherit;
   margin-left: 12px;
   margin-right: 12px;
 }
-/* button:disabled {
-  pointer-events: none;
-} */
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+}
+/** =============================================== GALLERY */
 
 :root {
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -113,82 +110,97 @@ input {
 }
 
 .gallery {
-  display: grid;
-  max-width: 1140px;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-auto-rows: 240px;
-  grid-gap: 12px;
+  max-width: 1800px;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
   list-style: none;
+  margin-top: 50px;
+  gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-
-.gallery__item {
+/* .gallery__item {
   position: relative;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-}
+} */
 
-.gallery__image:hover {
+/* .gallery__image:hover {
   transform: scale(1.03);
-}
+} */
 
-.gallery__image {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  transition: transform var(--animation-duration) var(--timing-function);
-}
-
-.gallery__link {
+/* .gallery__link {
   display: block;
   text-decoration: none;
   height: 100%;
+} */
+
+/* .gallery__link:hover {
+  transform: scale(1.03);
+} */
+
+/* &:hover,
+  &:focus {
+    transform: scale(1.05);
+  } */
+
+.photo-card {
+  height: 370px;
+  width: 420px;
+  border-radius: 0 0 10px 10px;
+  box-shadow: 0 10px 20px #dbdbdb;
+  position: relative;
+}
+.photo-card:hover {
+  transform: scale(1.05);
 }
 
-.gallery__link:hover {
-  cursor: zoom-in;
+.gallery__image {
+  border-radius: 10px 10px 0 0;
+  transition: transform var(--animation-duration) var(--timing-function);
 }
-
-/* ==================================================== */
-/* 
-.breed-select {
-  margin-top: 60px;
-  max-width: 400px;
-  margin-bottom: 20px;
-}
-
-.flex-container {
+.info {
   display: flex;
-  width: 1000px;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 16px;
+  /* padding-left: 28px; */
 }
-
-.cat-info {
-  display: flex;
-}
-
-.cat-info img {
-  display: block;
-  max-width: 400px;
-  height: auto;
-  margin-right: 20px;
-  background-color: #fffbf6;
-  border-radius: 12px;
-}
-
-.cat-info h2,
-p {
-  margin: 0;
-  margin-bottom: 15px;
-}
-
-.cat-card {
+.info-left,
+.info-right {
   flex: 1;
 }
+.info-left {
+  padding-left: 28px;
+}
 
-.loader-box {
-  width: 150px;
-  display: flex;
-  justify-content: center;
+.info-right {
+  text-align: start;
+  padding-left: 28px;
+}
+
+/* input {
+    width: 50%;
+    appearance: none;
+    border: none;
+    outline: none;
+    border-bottom: .2em solid #F082AC;
+    border-radius: .2em .2em 0 0;
+    padding: .4em;
+    color: #F082AC;
+} */
+
+/* input::placeholder {
+    color: #F082AC;
+} */
+
+/* button {
+    border-radius: 8px;
+    border-style: none;
+    color: #F082AC;
+    cursor: pointer;
+    height: 40px;
+    padding: 10px 16px;
 } */
