--- a/src/css/common.css
+++ b/src/css/common.css
@@ -95,6 +95,9 @@ input {
   font: inherit;
   margin-left: 12px;
   margin-right: 12px;
+  border: rgba(0, 0, 0, 0.4) 1px solid;
+  border-radius: 6px;
+  background-color: #fafafa;
 }
 
 /* .search-form > input {
@@ -111,20 +114,25 @@ input {
   gap: 5px;
 }
 
-/* .btn-form {
-    margin-left: 40px;
-    margin-right: 100px;
-    padding: 10px 20px;
-    border: #141414 1px solid;
-    border-radius: 6px;
-    background-color: #ffdd00;
-    font-weight: 600;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+/* button {
+  padding: 8px 12px;
+  cursor: pointer;
+  font: inherit;
+  font-weight: bold;
+} */
+
+.btn-form {
+  color: rgba(33, 33, 33, 0.8);
+  border: rgba(0, 0, 0, 0.3) 1px solid;
+  border-radius: 6px;
+  background-color: rgba(38, 192, 211, 0.8);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-form:is(:hover, :focus) {
-    box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.5);
-} */
+.btn-form:hover,
+.btn-form:focus {
+  box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.5);
+}
 
 /** =============================================== WRAPPER */
 
