--- a/src/css/common.css
+++ b/src/css/common.css
@@ -98,6 +98,7 @@ input {
   border: rgba(0, 0, 0, 0.4) 1px solid;
   border-radius: 6px;
   background-color: #fafafa;
+  outline: none;
 }
 
 /* .search-form > input {
@@ -129,8 +130,7 @@ input {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-form:hover,
-.btn-form:focus {
+.btn-form:hover {
   box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.5);
 }
 
