--- a/src/css/common.css
+++ b/src/css/common.css
@@ -86,6 +86,7 @@ button {
   cursor: pointer;
   font: inherit;
   font-weight: bold;
+  outline: none;
 }
 /* button:disabled {
   pointer-events: none;
