--- a/src/css/common.css
+++ b/src/css/common.css
@@ -91,8 +91,9 @@ button {
 /* button:disabled {
   pointer-events: none;
 } */
+
 input {
-  padding: 8px;
+  padding: 12px;
   font: inherit;
   margin-left: 12px;
   margin-right: 12px;
@@ -102,26 +103,11 @@ input {
   outline: none;
 }
 
-/* .search-form > input {
-    height: 36px;
-    width: 200px;
-    padding: 8px;
-    border: #141414 1px solid;
-    border-radius: 6px;
-} */
-
 .search-form {
   display: flex;
   justify-content: center;
   gap: 5px;
 }
-
-/* button {
-  padding: 8px 12px;
-  cursor: pointer;
-  font: inherit;
-  font-weight: bold;
-} */
 
 .btn-form {
   color: rgba(33, 33, 33, 0.8);
@@ -144,7 +130,6 @@ input {
   padding: 20px 20px;
   text-align: center;
   background-color: rgba(38, 192, 211, 0.8);
-  /* border-bottom: #141414 1px solid; */
   box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.5);
 }
 /** =============================================== GALLERY */
@@ -160,43 +145,12 @@ input {
   margin-left: auto;
   margin-right: auto;
   list-style: none;
-  margin-top: 110px;
+  margin-top: 140px;
   gap: 18px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-/* .gallery__item {
-  position: relative;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-} */
-
-/* .gallery__image:hover {
-  transform: scale(1.03);
-} */
-
-/* .gallery__link {
-  display: block;
-  text-decoration: none;
-  height: 100%;
-} */
-
-/* .gallery__link:hover {
-  transform: scale(1.03);
-} */
-
-/* &:hover,
-  &:focus {
-    transform: scale(1.05);
-  } */
-
-/* img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  object-fit: cover;
-} */
 
 .photo-card {
   width: 320px;
@@ -238,50 +192,10 @@ input {
   padding-left: 12px;
 }
 
-/* input {
-    width: 50%;
-    appearance: none;
-    border: none;
-    outline: none;
-    border-bottom: .2em solid #F082AC;
-    border-radius: .2em .2em 0 0;
-    padding: .4em;
-    color: #F082AC;
-} */
-
-/* input::placeholder {
-    color: #F082AC;
-} */
-
-/* button {
-    border-radius: 8px;
-    border-style: none;
-    color: #F082AC;
-    cursor: pointer;
-    height: 40px;
-    padding: 10px 16px;
-} */
-
 /** =============================================== BTN-UP */
 
-/* background: '#26c0d3',
-    textColor: '#fff',
-    childClassName: 'notiflix-notify-info',
-    notiflixIconColor: 'rgba(0,0,0,0.2)',
-    fontAwesomeClassName: 'fas fa-info-circle',
-    fontAwesomeIconColor: 'rgba(0,0,0,0.2)',
-    backOverlayColor: 'rgba(38,192,211,0.2)', */
-
 .btn-up {
-  /* font-size: 40px;
-  color: #ffdd00; */
-
-  font-size: 40px;
-  color: rgba(255, 255, 255, 0.8);
-
   visibility: hidden;
-  /* opacity: 0.8; */
-
   position: fixed;
   z-index: 3;
   bottom: 100px;
@@ -290,11 +204,11 @@ input {
 
   width: 120px;
   height: 60px;
+  font-size: 40px;
 
+  color: rgba(255, 255, 255, 0.8);
   background-color: rgba(38, 192, 211, 0.8);
-  /* border-radius: 50%; */
   border-radius: 50px 10px;
-  /* border: #141414 1px solid; */
   border: transparent;
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -311,18 +225,42 @@ input {
 }
 
 .btn-up.hidden:is(:hover, :focus) {
-  /* background-color: #00bde7; */
-
   background-color: rgba(38, 192, 211, 0.9);
   color: rgba(255, 255, 255, 0.9);
-
-  /* box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.5); */
-  /* box-shadow: 0 6px 12px #dbdbdb; */
   box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.5);
-
   border: none;
 }
 
 /* .notiflix-notify:hover {
   opacity: 1;
 } */
+
+/** =============================================== HEART */
+
+.like-button {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.like-icon {
+  fill: transparent;
+  stroke: rgba(255, 255, 255, 0.8);
+  transition: fill 0.3s ease;
+}
+
+.like-button.clicked .like-icon {
+  stroke: red;
+  /* fill: red; Color change on click */
+}
+
+.like-button:hover {
+  transform: scale(1.5);
+}
