--- a/src/css/common.css
+++ b/src/css/common.css
@@ -121,6 +121,9 @@ input {
   box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.5);
 }
 
+h1 {
+  color: rgba(0, 0, 0, 0.5);
+}
 /** =============================================== WRAPPER */
 
 .wrapper-form {
@@ -256,11 +259,11 @@ input {
   transition: fill 0.3s ease;
 }
 
-.like-button.clicked .like-icon {
-  stroke: red;
-  /* fill: red; Color change on click */
-}
-
 .like-button:hover {
   transform: scale(1.5);
 }
+
+/* .like-icon.clicked {
+  fill: rgba(255, 0, 0, 0.8);
+  stroke: rgba(255, 0, 0, 0.8);
+} */
